# simple_bert

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: check-version.yml  ci.yml  release.yml  tag.yml
notes/: attention.ipynb  bert.ipynb  datasets.ipynb  embeddings.ipynb  encoder.ipynb  feed_forward.ipynb  pooler.ipynb  tokenizer.py  tokenizers.ipynb  trainer.ipynb
rust/: Cargo.toml
rust/src/: lib.rs  token_encoders.pyi
rust/src/token_encoders/: base.rs  bpe.rs  mod.rs  wp.rs
src/: scheduler.py  settings.py  tracker.py  trainer.py
src/data/: base.py  finetuning.py  inference.py  pretraining.py
src/data/types/inputs/: finetuning.py  inference.py  pretraining.py
src/data/types/outputs/: finetuning.py  inference.py  pretraining.py
src/datasets/: base.py  finetuning.py  inference.py  pretraining.py
src/datasets/types/: base.py  finetuning.py  inference.py  pretraining.py
src/datasets/types/inputs/: finetuning.py  inference.py  pretraining.py
src/datasets/types/outputs/: base.py  finetuning.py  inference.py  pretraining.py
src/models/attention/: layer.py  output.py
src/modules/: bert.py  embeddings.py  encoder.py  feed_forward.py  pooler.py  trainable.py
src/modules/attention/: layer.py  multihead.py  output.py
src/modules/bert/: backbone.py  cls_head.py  finetuning.py  mlm_head.py  pretraining.py
src/modules/bert/heads/: cls.py  mlm.py  nsp.py
src/modules/encoders/: encoder.py  layer.py
src/token_encoders/: base.py  bpe.py  rust_bpe.py  wp.py
src/token_encoders/rust/: base.py  bpe.py  wp.py
src/trainers/: base.py  finetuning.py  pretraining.py
tests/: conftest.py  test_settings.py  test_tracker.py  test_trainer.py
tests/attention/: conftest.py  test_layer.py  test_multihead.py  test_output.py
tests/datasets/: conftest.py  test_base.py  test_finetuning.py  test_inference.py  test_inputs.py  test_pretraining.py
tests/modules/: conftest.py  test_bert.py  test_embeddings.py  test_encoder.py  test_feed_forward.py  test_pooler.py
tests/modules/attention/: test_layer.py  test_multihead.py  test_output.py
tests/modules/bert/: test_backbone.py  test_cls_head.py  test_finetuning.py  test_mlm_head.py  test_pretraining.py
tests/modules/encoders/: test_encoder.py  test_layer.py
tests/token_encoders/: conftest.py  test_base.py  test_bpe.py  test_wp.py
tests/token_encoders/rust/: test_rust_bpe.py  test_rust_wp.py
tests/trainers/: conftest.py  test_finetuning.py  test_pretraining.py
