[project]
name = "simple_bert"
description = "A package for training small and simple bert models"
readme = "README.md"
authors = [{ name = "Sergio Frayle Perez", email = "sfp932705@gmail.com" }]
version = "0.0.0"
requires-python = ">=3.13"
dependencies = ["torch==2.9.1"]

[tool.black]
line-length = 88

[tool.bumpversion]
commit = true
tag = false

[tool.mypy]
mypy_path = ["src"]
ignore_missing_imports = false
check_untyped_defs = true
exclude = '^data\/*'
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --cov-report term-missing"
env_files = ".env.test"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.ruff]
exclude = [".git", "__pycache__", ".venv", "venv", ]
line-length = 88
indent-width = 4
src = ["src/", "tests/"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
