[package]
name = "simple_bert_backend"
version = "0.0.1"
edition = "2021"

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
rayon = { version = "1.11.0" }
rustc-hash = { version = "2.1.1" }
unicode-normalization = "0.1.25"
unicode-general-category = "1.1.0"